--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react": "16.8.3",
-    "react-native": "0.59.8"
+    "react-native": "0.59.8",
+    "react-native-star-rating": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
