--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-popup-menu": "^0.15.6",
     "react-native-star-rating": "^1.1.0"
   },
   "devDependencies": {
