--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.54.1",
+    "react-native-popup-menu": "^0.15.6",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
