--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "js-priority-queue": "^0.1.5",
     "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
     "node-fetch": "^2.6.0",
     "react": "16.8.3",
     "react-native": "0.59.8"
