--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "apac": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "js-priority-queue": "^0.1.5",
     "mysql": "^2.17.1",
@@ -15,6 +16,7 @@
     "node-fetch": "^2.6.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-bcrypt": "^2.4.0",
     "react-native-popup-menu": "^0.15.6",
     "react-native-star-rating": "^1.1.0"
   },
