--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "metro-react-native-babel-preset": "^0.54.1",
     "react-native-popup-menu": "^0.15.6",
     "react-native-router-flux": "^4.0.6",
+    "react-native-wheel-scroll-picker": "^0.2.4",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
