--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.5.1",
+    "AsyncStorage": "^0.1.5",
     "apac": "^3.0.2",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
