--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "js-priority-queue": "^0.1.5",
+    "lodash.values": "^4.3.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "node-fetch": "^2.6.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-bcrypt": "^2.4.0",
+    "react-native-elements": "^1.1.0",
     "react-native-popup-menu": "^0.15.6",
-    "react-native-star-rating": "^1.1.0"
+    "react-native-star-rating": "^1.1.0",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
