--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "16.8.3",
     "react-native": "^0.59.8",
     "react-native-bcrypt": "^2.4.0",
+    "react-native-fbsdk": "^1.0.1",
     "react-native-popup-menu": "^0.15.6",
     "react-native-star-rating": "^1.1.0"
   },
