--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-bcrypt": "^2.4.0",
     "react-native-elements": "^1.1.0",
     "react-native-popup-menu": "^0.15.6",
+    "react-native-responsive-screen": "^1.2.2",
     "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^6.6.0"
   },
