--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-native": "^0.59.8",
     "react-native-bcrypt": "^2.4.0",
     "react-native-elements": "^1.1.0",
+    "react-native-flip-card": "^3.5.5",
     "react-native-popup-menu": "^0.15.6",
     "react-native-responsive-screen": "^1.2.2",
     "react-native-star-rating": "^1.1.0",
+    "react-native-swipe-gestures": "^1.0.3",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
