--- a/ios/bookbranch/Info.plist
+++ b/ios/bookbranch/Info.plist
@@ -85,5 +85,27 @@
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
 	</array>
+  
+  <key>CFBundleURLTypes</key>
+  <array>
+    <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fb356022665094302</string>
+      </array>
+    </dict>
+  </array>
+  <key>FacebookAppID</key>
+  <string>356022665094302</string>
+  <key>FacebookDisplayName</key>
+  <string>Bookbranch</string>
+  
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+    <string>fbapi</string>
+    <string>fb-messenger-share-api</string>
+    <string>fbauth2</string>
+    <string>fbshareextension</string>
+  </array>
 </dict>
 </plist>
