--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@react-native-community/async-storage": "^1.5.1",
     "apac": "^3.0.2",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "js-priority-queue": "^0.1.5",
     "lodash.values": "^4.3.0",
@@ -32,6 +33,7 @@
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.54.1",
+    "react-native-dotenv": "^0.2.0",
     "react-native-flip-card": "^3.5.5",
     "react-native-popup-menu": "^0.15.6",
     "react-native-router-flux": "^4.0.6",
