--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react": "16.8.3",
     "react-native": "^0.59.8",
     "react-native-bcrypt": "^2.4.0",
-    "react-native-fbsdk": "^1.0.1",
     "react-native-elements": "^1.1.0",
+    "react-native-fbsdk": "github:facebook/react-native-fbsdk#5fe8e726966faf83d3388af85dd9740f4015e5d6",
     "react-native-popup-menu": "^0.15.6",
     "react-native-responsive-screen": "^1.2.2",
     "react-native-star-rating": "^1.1.0",
